--- a/Trillo/index.html
+++ b/Trillo/index.html
@@ -53,8 +53,96 @@
         </nav>
       </header>
       <div class="content">
-        <nav class="sidebar">Navigation</nav>
-        <main class="hotel-view">Hotel view</main>
+        <nav class="sidebar">
+          <ul class="side-nav">
+            <li class="side-nav__item side-nav__item--active">
+              <a href="#" class="side-nav__link"
+                ><svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-home"></use></svg
+                ><span>Hotel</span></a
+              >
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link"
+                ><svg class="side-nav__icon">
+                  <use
+                    xlink:href="img/sprite.svg#icon-aircraft-take-off"
+                  ></use></svg
+                ><span>Flight</span></a
+              >
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link"
+                ><svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-key"></use></svg
+                ><span>Car Rentals</span></a
+              >
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link"
+                ><svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-map"></use></svg
+                ><span>Tours</span></a
+              >
+            </li>
+          </ul>
+          <div class="legal">&copy; 2024 by Trillo. All rights reserved</div>
+        </nav>
+        <main class="hotel-view">
+          <div class="gallery">
+            <figure class="gallery__item">
+              <img
+                src="img/hotel-1.jpg"
+                alt="Hotel Photo 1"
+                class="gallery__photo"
+              />
+            </figure>
+            <figure class="gallery__item">
+              <img
+                src="img/hotel-2.jpg"
+                alt="Hotel Photo 2"
+                class="gallery__photo"
+              />
+            </figure>
+            <figure class="gallery__item">
+              <img
+                src="img/hotel-3.jpg"
+                alt="Hotel Photo 3"
+                class="gallery__photo"
+              />
+            </figure>
+          </div>
+          <div class="overview">
+            <h1 class="overview__heading">Hotel Las Palmas</h1>
+            <div class="overview__stars">
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+            </div>
+            <div class="overview__location">
+              <svg class="overview__icon-location">
+                <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+              </svg>
+              <button class="btn-inline">Albufeira, Portugal</button>
+            </div>
+            <div class="overview__rating">
+              <div class="overview__rating-average">8.6</div>
+              <div class="overview__rating-count">429 votes</div>
+            </div>
+          </div>
+        </main>
       </div>
     </div>
   </body>
